# toy-lang1

./: .eslintrc.js  .gitignore  AST.hs  CHANGELOG.md  JS.hs  LICENSE  Main.hs  Parser.hs  README.md  default.nix  haskell-test.cabal  nixpkgs.json  package.json  project.nix  shell.nix  toy-lang1.cabal
.github/workflows/: test.yml
app/: Main.hs
examples/: input.tl  output.js
scripts/: build  compile  compile.sh  watch  watch.sh
src/: AST.hs  Compiler.hs  JS.hs  Main.hs  Parser.hs  Runner.hs
test/: Test.hs
test/golden/: constantNum.js  constantNum.tl  constantString.js  constantString.tl  example.js  letExpression.js  letExpression.tl  simpleFunction.js  simpleFunction.tl
