cabal-version:       >=1.10
name:                toy-lang1
version:             0.1.0.0
license-file:        LICENSE
author:              Peter Stuart
maintainer:          peter@peterstuart.org
build-type:          Simple
extra-source-files:  CHANGELOG.md

library
  exposed-modules:     Runner
  other-modules:       AST
                     , Compiler
                     , JS
                     , Parser
  build-depends:       base >= 4.13 && < 4.14
                     , megaparsec
                     , parser-combinators
  hs-source-dirs:      src
  default-language:    Haskell2010

executable tlc
  main-is:             Main.hs
  build-depends:       base >= 4.13 && < 4.14
                     , toy-lang1
  hs-source-dirs:      app
  default-language:    Haskell2010