cabal-version:       >=1.10
name:                toy-lang1
version:             0.1.0.0
license-file:        LICENSE
author:              Peter Stuart
maintainer:          peter@peterstuart.org
build-type:          Simple
extra-source-files:  CHANGELOG.md

library
  exposed-modules:     Runner
  other-modules:       AST
                     , Compiler
                     , JS
                     , Parser
  build-depends:       base >= 4.13 && < 4.14
                     , megaparsec
                     , parser-combinators
  hs-source-dirs:      src
  default-language:    Haskell2010

executable tlc
  main-is:             Main.hs
  build-depends:       base >= 4.13 && < 4.14
                     , toy-lang1
  hs-source-dirs:      app
  default-language:    Haskell2010

test-suite toy-lang1-test
  default-language:    Haskell2010
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Test.hs
  build-depends:       base >= 4.13 && < 4.14
                     , toy-lang1
                     , bytestring
                     , filepath
                     , tasty
                     , tasty-golden
